# app/Http/Controllers/FilmsController.php
@@ -28,8 +28,8 @@ class FilmsController extends Controller
                 'director' => $film->director,
                 'producer' => $film->producer,
                 'release_date' => $film->release_date,
-                'created_at' => $film->created_at,
-                'updated_at' => $film->update_at,
+                'created' => $film->created,
+                'edited' => $film->edited,
                 'characters' => $film->characters->pluck('url'),
                 'planets' => $film->planets->pluck('url'),
                 'species' => $film->species->pluck('url'),
@@ -57,7 +57,7 @@ class FilmsController extends Controller
  *     summary="Afficher un film à l'aide de son id",
  *     tags={"Films"},
  *     @OA\Response(response=400, description="Invalid request"),
- *     @OA\Response(response="200", description="Retourne le film ciblé par l'id passé en paramètre")
+ *     @OA\Response(response="200", description="Retourne la liste des films")
  * )
  */
     public function read(string $id)
@@ -75,8 +75,8 @@ class FilmsController extends Controller
             'director' => $film->director,
             'producer' => $film->producer,
             'release_date' => $film->release_date,
-            'created_at' => $film->created_at,
-            'updated_at' => $film->updated_at,
+            'created' => $film->created,
+            'edited' => $film->edited,
             'characters' => $film->characters->pluck('url'),
             'planets' => $film->planets->pluck('url'),
             'species' => $film->species->pluck('url'),
@@ -141,7 +141,121 @@ class FilmsController extends Controller
  *     @OA\Response(response="200", description="Création d'un film")
  * )
  */
-    public function create(Request $request)
+public function create(Request $request)
+{
+    $request->validate([
+        'title' => 'required|string|max:255',
+        'episode_id' => 'required|integer',
+        'opening_crawl' => 'required|string',
+        'director' => 'required|string|max:255',
+        'producer' => 'required|string|max:255',
+        'release_date' => 'required|date',
+        'planets' => 'array',      
+        'characters' => 'array',   
+        'starships' => 'array',    
+        'vehicles' => 'array',     
+        'species' => 'array',      
+    ]);
+
+    $film = Films::create([
+        'title' => $request->input('title'),
+        'episode_id' => $request->input('episode_id'),
+        'opening_crawl' => $request->input('opening_crawl'),
+        'director' => $request->input('director'),
+        'producer' => $request->input('producer'),
+        'release_date' => $request->input('release_date'),
+    ]);
+
+    if ($request->has('planets')) {
+        $film->planets()->attach($request->input('planets'));
+    }
+
+    if ($request->has('characters')) {
+        $film->characters()->attach($request->input('characters'));
+    }
+
+    if ($request->has('starships')) {
+        $film->starships()->attach($request->input('starships'));
+    }
+
+    if ($request->has('vehicles')) {
+        $film->vehicles()->attach($request->input('vehicles'));
+    }
+
+    if ($request->has('species')) {
+        $film->species()->attach($request->input('species'));
+    }
+
+    return response()->json([
+        'message' => 'Film created successfully',
+        'film' => $film,
+    ], 201);   
+}
+
+
+/**
+ * @OA\Put(
+ *     path="/api/films/{id}",
+ * @OA\Parameter(
+ *       name="id",
+ *       in="path",
+ *       required=true,
+ *       description="ID du film",
+ *       @OA\Schema(
+ *       type="integer"
+ *       )
+ *   ),
+ *     @OA\RequestBody(
+ *         required=true,
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 @OA\Property(property="title", type="string", example="A New Hope"),
+ *                 @OA\Property(property="episode_id", type="integer", example=4),
+ *                 @OA\Property(property="opening_crawl", type="string", example="It is a period of civil war..."),
+ *                 @OA\Property(property="director", type="string", example="George Lucas"),
+ *                 @OA\Property(property="producer", type="string", example="Gary Kurtz, Rick McCallum"),
+ *                 @OA\Property(property="release_date", type="string", format="date", example="1977-05-25"),
+ *                 @OA\Property(
+ *                     property="planets",
+ *                     type="array",
+ *                     @OA\Items(type="string", format="text"),
+ *                     example={1}
+ *                 ),
+ *                 @OA\Property(
+ *                     property="characters",
+ *                     type="array",
+ *                     @OA\Items(type="string", format="text"),
+ *                     example={1}
+ *                 ),
+ *                 @OA\Property(
+ *                     property="starships",
+ *                     type="array",
+ *                     @OA\Items(type="string", format="text"),
+ *                     example={2}
+ *                 ),
+ *                 @OA\Property(
+ *                     property="vehicles",
+ *                     type="array",
+ *                     @OA\Items(type="string", format="text"),
+ *                     example={4}
+ *                 ),
+ *                 @OA\Property(
+ *                     property="species",
+ *                     type="array",
+ *                     @OA\Items(type="string", format="text"),
+ *                     example={1}
+ *                 ),
+ *             )
+ *         )
+ *     ),
+ *     summary="Modifier un film",
+ *     tags={"Films"},
+ *     @OA\Response(response=400, description="Invalid request"),
+ *     @OA\Response(response="200", description="Retourne la liste des films")
+ * )
+ */
+    public function update(Request $request, string $id)
     {
         $request->validate([
             'title' => 'required|string|max:255',
@@ -157,7 +271,9 @@ class FilmsController extends Controller
             'species' => 'array',      
         ]);
     
-        $film = Films::create([
+        $film = Films::findOrFail($id);
+    
+        $film->update([
             'title' => $request->input('title'),
             'episode_id' => $request->input('episode_id'),
             'opening_crawl' => $request->input('opening_crawl'),
@@ -167,52 +283,29 @@ class FilmsController extends Controller
         ]);
     
         if ($request->has('planets')) {
-            $film->planets()->attach($request->input('planets'));
+            $film->planets()->sync($request->input('planets'));
         }
     
         if ($request->has('characters')) {
-            $film->characters()->attach($request->input('characters'));
+            $film->characters()->sync($request->input('characters'));
         }
     
         if ($request->has('starships')) {
-            $film->starships()->attach($request->input('starships'));
+            $film->starships()->sync($request->input('starships'));
         }
     
         if ($request->has('vehicles')) {
-            $film->vehicles()->attach($request->input('vehicles'));
+            $film->vehicles()->sync($request->input('vehicles'));
         }
     
         if ($request->has('species')) {
-            $film->species()->attach($request->input('species'));
+            $film->species()->sync($request->input('species'));
         }
     
         return response()->json([
-            'message' => 'Film created successfully',
+            'message' => 'Film mis à jour',
             'film' => $film,
-        ], 201);    }
-
-/**
- * @OA\Put(
- *     path="/api/films/{id}",
- * @OA\Parameter(
- *       name="id",
- *       in="path",
- *       required=true,
- *       description="ID du film",
- *       @OA\Schema(
- *       type="integer"
- *       )
- *   ),
- *     summary="Modifier un film",
- *     tags={"Films"},
- *     @OA\Response(response=400, description="Invalid request"),
- *     @OA\Response(response="200", description="Modification d'un film")
- * )
- */
-    public function update(Request $request, string $id)
-    {
-        $films = Films::find($id);
-        $films->update($request->all());
+        ], 200);
     }
 
 /**
@@ -230,7 +323,7 @@ class FilmsController extends Controller
  *     summary="Supprimer un film",
  *     tags={"Films"},
  *     @OA\Response(response=400, description="Invalid request"),
- *     @OA\Response(response="200", description="Suppression d'un film")
+ *     @OA\Response(response="200", description="Retourne la liste des films")
  * )
  */
     public function destroy(string $id)
